cmake_minimum_required(VERSION 2.8)
project( encodevideo )
find_package( OpenCV  REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} /usr/include/ffmpeg )
link_directories(/usr/lib64)
add_executable(capture capture.cpp  encoder.cpp)
add_executable(audio audioencoder.cpp)
add_executable(dispatch dispatch.cpp)
add_executable(receive receive.cpp decoder.cpp)
target_link_libraries(dispatch pthread)
target_link_libraries(receive ${OpenCV_LIBS} avcodec avutil  pthread)
target_link_libraries(capture ${OpenCV_LIBS} avcodec avutil  pthread)
target_link_libraries(audio  avcodec avformat avutil  pthread portaudio  m)
set_target_properties(capture PROPERTIES RUNTIME_OUTPUT_DIRECTORY ./bin)  
set_target_properties(dispatch PROPERTIES RUNTIME_OUTPUT_DIRECTORY ./bin)  
set_target_properties(receive PROPERTIES RUNTIME_OUTPUT_DIRECTORY ./bin)
set_target_properties(audio PROPERTIES RUNTIME_OUTPUT_DIRECTORY ./bin)
  
